--- a/GUI_Flask/HelloFlask/templates/index.html
+++ b/GUI_Flask/HelloFlask/templates/index.html
@@ -25,20 +25,18 @@
     <div class="clearfix visible-sm"></div>
 
     <div class="row">
-        <div style="background-color: lightgray; border:5px solid white; height: 125px; display: flex; justify-content: center; align-items:center">
-            <label for="myfile" id="subMessage">{{ select }}</label>
-            <input type="file" id="myfile" name="myfile" style="padding: 20px" accept=".doc,.docx, .txt">
-        </div>
-    </div>
-    <div class="clearfix visible-sm"></div>
-    <div class="row">
         <div style="background-color: lightgray; border:5px solid white; height: 500px; display: flex; justify-content: center; align-items:center">
             <div id="my_camera"></div>
-            <input type=button value="Take Snapshot" onClick="take_snapshot()" >
+            <input type=button value="Take Snapshot" onClick="take_snapshot()">
             <div id="results"></div>
         </div>
     </div>
-        
+    <div class="row">
+        <div style="background-color: lavender; border:5px solid white; height: 200px; display: flex; justify-content: center; align-items:center">
+            <a href="FileUpload" class="nextStep">Click to Upload File</a>
+        </div>
+    </div>
+
     <script type="text/javascript" src="/static/webcamjs-master/webcam.min.js"></script>
     <script>
         Webcam.set({
@@ -60,5 +58,6 @@
             });
         }
     </script>
+
 </body>
 </html>
