--- a/GUI_Flask/HelloFlask/templates/Encrypting.html
+++ b/GUI_Flask/HelloFlask/templates/Encrypting.html
@@ -3,12 +3,12 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title>File Not Uploaded</title>
+    <title>Encrypting</title>
     <link rel="stylesheet" type="text/css" href="/static/styles.css" />
 </head>
-<body style="background-color: lightgray">
-    <span class="message" id="error">File Not Uploaded</span>
+<body>
+    <span class="message" id="purple">Encrypting</span>
     <br />
-    <a href="/" class="nextStep"> Click to Try again</a>
+    <!--<a href="/" class="nextStep"> Click to Try again</a>-->
 </body>
 </html>
