releasing key and lock

--- a/GUI_Flask/HelloFlask/templates/CreateLock.html
+++ b/GUI_Flask/HelloFlask/templates/CreateLock.html
@@ -20,9 +20,9 @@
         </form>
     </div>
 
-    <!--<div style="background-color: aliceblue; border:5px solid white; height: 200px; display: flex; justify-content: center; align-items:center">
-        <a href="FileUpload" class="nextStep">Click to Upload File</a>
-    </div>-->
+    <div style="background-color: aliceblue; border:5px solid white; height: 200px; display: flex; justify-content: center; align-items:center">
+        <a href="http://localhost:5555/checking" class="nextStep">Click to Decrypt File</a>
+    </div>
 
     <script type="text/javascript" src="/static/webcamjs-master/webcam.min.js"></script>
     <script>
