comparing key results

--- a/GUI_Flask/HelloFlask/templates/NotSuccessful.html
+++ b/GUI_Flask/HelloFlask/templates/NotSuccessful.html
@@ -3,11 +3,12 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title>Decrypt Page</title>
+    <title>No Match</title>
     <link rel="stylesheet" type="text/css" href="/static/styles.css" />
 </head>
 <body style="background-color: lightgray">
-    <span class="message" id="blue">Success!</span>
-    <a download= "HelloFlask/static/file_uploads/data.txt"> Click here to download file</a>
+    <span class="message" id="error">Decryption not successful</span>
+    <br />
+    <a href="/" class="nextStep"> Click to Try again</a>
 </body>
 </html>
