--- a/GUI_Flask/HelloFlask/templates/checking.html
+++ b/GUI_Flask/HelloFlask/templates/checking.html
@@ -8,6 +8,6 @@
 </head>
 <body style="background-color: lightgray">
     <span class="message" id="blue">Success!</span>
-    <a download= "HelloFlask/static/file_uploads/data.txt"> Click here to download file</a>
+    <a download= "file" href="HelloFlask/static/encryption_folder/DecryptedFile.txt"> Click here to download file</a>
 </body>
 </html>
