--- a/GUI_Flask/HelloFlask/templates/NotUploaded.html
+++ b/GUI_Flask/HelloFlask/templates/NotUploaded.html
@@ -3,11 +3,15 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title>File Not Uploaded</title>
+    <title>Not Uploaded</title>
     <link rel="stylesheet" type="text/css" href="/static/styles.css" />
 </head>
 <body style="background-color: lightgray">
-    <span class="message" id="error">File Not Uploaded</span>
+    <span class="message" id="error">Uploads not successful</span>
+    <br />
+    <span class="message">Files need extension .txt, .doc or .docx</span>
+    <br />
+    <span class="message">Make sure all your face is clearly shown </span>
     <br />
     <a href="/" class="nextStep"> Click to Try again</a>
 </body>
