--- a/GUI_Flask/HelloFlask/templates/index.html
+++ b/GUI_Flask/HelloFlask/templates/index.html
@@ -73,7 +73,7 @@
             var xmlhttp = new XMLHttpRequest();
             xmlhttp.open('POST', "http://localhost:5555/ImageUpload");
             xmlhttp.send(formData);
-            document.getElementById('upload_success').innerHTML = 'Upload Successful, now upload the file';
+            document.getElementById('upload_success').innerHTML = 'Done, now upload the file';
 
         }
 
