--- a/GUI_Flask/HelloFlask/templates/NotUploadedDecrypt.html
+++ b/GUI_Flask/HelloFlask/templates/NotUploadedDecrypt.html
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<!--This page displays if the image does not contain a face-->
+<!--This page is used if no face is detected in the image being used for decryption-->
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
@@ -12,6 +12,6 @@
     <br />
     <span class="message">{{ explanation }} </span>
     <br />
-    <a href="/" class="nextStep"> Click to Try again</a>
+    <a href="/CreateLock" class="nextStep"> Click to Try again</a>
 </body>
 </html>
