--- a/GUI_Flask/HelloFlask/templates/index.html
+++ b/GUI_Flask/HelloFlask/templates/index.html
@@ -1,4 +1,7 @@
-﻿<html>
+﻿<!DOCTYPE html>
+<!--This page takes a snapshot of the user's face-->
+
+<html>
 <head>
     <title>{{ title }}</title>
     <link rel="stylesheet" type="text/css" href="/static/styles.css" />
@@ -24,6 +27,7 @@
     </div>
     <div class="clearfix visible-sm"></div>
 
+    <!--Upload first face image to encrypt file-->
     <div class="row">
         <div style="background-color: lightgray; border:5px solid white; height: 700px; display: flex; justify-content: center; align-items:center">
             <form method="POST" enctype="multipart/form-data" id="myForm">
@@ -39,7 +43,7 @@
 
     <div class="row">
         <div style="background-color: lavender; border:5px solid white; height: 200px; display: flex; justify-content: center; align-items:center">
-            <a href="FileUpload" class="nextStep">Click to Upload File</a>
+            <a href="FileUpload" class="nextStep">Click to check image and upload a file</a>
         </div>
     </div>
     <div class="clearfix visible-sm"></div>
@@ -73,7 +77,7 @@
             var xmlhttp = new XMLHttpRequest();
             xmlhttp.open('POST', "http://localhost:5555/ImageUpload");
             xmlhttp.send(formData);
-            document.getElementById('upload_success').innerHTML = 'Done, now upload the file';
+            document.getElementById('upload_success').innerHTML = 'Uploaded, now scroll to check image and decrypt file';
 
         }
 
